chore(api): look up by slug rather than id
